# MW_test_task

./: CMakeLists.txt  CreateSkin.cpp  CreateSkin.hpp  Intersection.cpp  Intersection.hpp  PointVisualizer_readme.txt  README.md  WriteFile.cpp  WriteFile.hpp  cutSphereMove.cpp  mwArcFunction.cpp  mwArcFunction.hpp  test_task  test_task.pro
